2023-03-09 Roy Hills <royhills@hotmail.com>

	* arp-scan.c, arp-scan.h, arp-scan.1.dist: Added the ${IPnum} output
	  field, which displays the host IPv4 address as a 32-bit integer.
	  This permits sorting by IP address using simple numeric comparison.
	  Thanks to @gspannu for the feature request.

2023-02-26 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Change the informational message about the interface
	  network and netmask used to generate the target list when
	  --localnet is used, and always display this message (previously
	  it was only displayed if --verbose was given).

2023-02-25 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Always warn if remove_host() is called on a non-live
	  host. This should never happen since the changes detailed in
	  github issue #67.

	* wrappers.c, utils.c: Move my_lookupdev() function from wrappers.c
	  to utils.c where it belongs.

2023-02-18 Roy Hills <royhills@hotmail.com>

	* SECURITY.md: New file containing the security policy for reporting
	  potential security vulnerabilities.

	* README.md, Makefile.am: Added references to SECURITY.md.

	* README.md, NEWS.md, code-coverage.yml: Documentation updates.

2023-02-13 Roy Hills <royhills@hotmail.com>

	* README.md: Moved the Notes for Contributors section to new file
	  CONTRIBUTING.md.
	* CONTRIBUTING.md: New file.

2023-02-12 Roy Hills <royhills@hotmail.com>

	* *.pcap, *.dat: Moved pcap data files and raw data files into
	  testdata subdirectory.

	* Makefile.am, check-decode, check-error, check-host-list,
	  check-ieee-reg, check-options, check-packet: Modify paths of data
	  files to use new testdata subdirectory.

	* testdata/README.md: new file describing the files in this directory.

	* .github/workflows/code-coverage.yml: Increase --limit value from
	  1 to 10 to ensure consistent coverage.

2023-02-11 Roy Hills <royhills@hotmail.com>

	* Makefile.am, check-error, check-options, arp-scan.c: Add some